name:                haskell-mgeneric
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Rafaël Bocquet
maintainer:          rafaelbocquet+github@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.MGeneric,
                       Data.MGeneric.TH,
                       Data.MGeneric.Instances,
                       Data.MFunctor,
                       Data.MFoldable,
                       Data.MTraversable,
                       Data.HList,
                       Data.HList.TH,
                       Data.Unapply
  build-depends:       base >=4.8 && <4.9,
                       template-haskell,
                       lens,
                       mtl,
                       containers
  other-extensions:    TemplateHaskell
  hs-source-dirs:      src
  default-language:    Haskell2010